--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ h1{
 }
 </style>
 <body>
-    <h1>Web điều khiển đóng gói tự động</h1>
+    <h1>Trang web điều khiển đóng gói thùng rác số 1</h1>
     <div class="control">
     <button class="btn" id="on">Đóng gói</button>
     <button class="btn" id="off">Mặc định</button>
